name: ghc-heap-prof
version: 0.0.0
synopsis: Various tools for GHC Heap Profiling
-- description:
homepage: https://github.com/maoe/ghc-heap-prof
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyright (C) 2015 Mitsutoshi Aoe
category: Development
build-type: Simple
cabal-version: >= 1.10

-- library
--   -- exposed-modules:
--   -- other-modules:
--   -- other-extensions:
--   build-depends:       base >=4.7 && <4.8
--   hs-source-dirs:      src
--   default-language:    Haskell2010

executable ghp
  main-is: ghp.hs
  hs-source-dirs: bin
  build-depends:
      base >= 4.7 && < 4.9
    , text >= 1.0 && < 1.3
    , split >= 0.2 && < 0.3
  default-language: Haskell2010
